add ci workflow

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,2 +1,11 @@
 version = 3.0.6
 runner.dialect = scala3
+
+project.git = true
+
+assumeStandardLibraryStripMargin = true
+align.stripMargin = true
+
+indent.main = 2
+
+docstrings.style = keep
