formatting, iris mlp example

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -5,6 +5,8 @@ project.git = true
 
 assumeStandardLibraryStripMargin = true
 align.stripMargin = true
+align.preset = more
+maxColumn = 90
 
 indent.main = 2
 
